# bgr-ws-snapshot-entire-smoke-test

./: .gitignore  README.md
ekf_project_ros2_workspace/ekf_project_ros2/: README.md  package.xml  setup.cfg  setup.py
ekf_project_ros2_workspace/ekf_project_ros2/ekf_project/analysis/: live_rmse_plotter.py  plotting.py  residual_analysis.py  tuning_helpers.py
ekf_project_ros2_workspace/ekf_project_ros2/ekf_project/config/: filter_config.py
ekf_project_ros2_workspace/ekf_project_ros2/ekf_project/core/: diagnostics.py  ekf_core.py  initialization.py  validation.py
ekf_project_ros2_workspace/ekf_project_ros2/ekf_project/data/: adapters.py  coordinate_utils.py  packet_types.py  time_sync.py  unit_conversions.py
ekf_project_ros2_workspace/ekf_project_ros2/ekf_project/models/: gps_position_model.py  gps_speed_model.py  measurement_base.py  nhc_model.py  process_model.py  steering_constraint_model.py  wheel_speed_model.py
ekf_project_ros2_workspace/ekf_project_ros2/ekf_project/runners/: run_log_replay.py  run_simulation.py
ros_path_tracking/: .gitignore  Makefile  README.md  launch.sh  reset_to_start.sh
ros_path_tracking/src/autonomous_car_sim/: package.xml  setup.cfg  setup.py
ros_path_tracking/src/autonomous_car_sim/autonomous_car_sim/: __init__.py  reset_position.py
ros_path_tracking/src/autonomous_car_sim/autonomous_car_sim/controller/: __init__.py  math_utils.py  node.py  params.py  path_utils.py  pid.py
ros_path_tracking/src/autonomous_car_sim/autonomous_car_sim/planner/: map.py  node.py  racing_line_trackdrive.npz
ros_path_tracking/src/autonomous_car_sim/config/: controller_base.yaml  controller_fast.yaml  controller_race.yaml  controller_safe.yaml  planner_racing.yaml
ros_path_tracking/src/autonomous_car_sim/launch/: autonomous_car.launch.py
src/TracksV0/tracks/: track_gui.py
src/bgr_description/: CMakeLists.txt  ekf_publisher.py
(+4 files in other folders)
