<?xml version="1.0"?>
<package format="3">
  <name>ekf_project</name>
  <version>0.1.0</version>
  <description>Modular 2D land-vehicle EKF workspace for GNSS/IMU/wheel-speed/constraint fusion.</description>
  <maintainer email="support@example.com">OpenAI</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
